# pytest-stochastics

./: .gitignore  Justfile  README.md  log  mypy.ini  pyproject.toml  pytest_config.yaml  pytest_stochastics.json  pytest_stochastics_config.json  testresults.tap
scripts/: colorate.sh  dumppy.sh
src/pytest_stochastics/: __init__.py  collector.py  data.py  helpers.py  logger.py  main.py  plugin.py  runner.py  runner_data.py
tests/: conftest.py  test_class_tests.py  test_func_tests.py  test_helpers.py  test_tests.py
