[tool.poetry]
name = "pytest-stochastics"
version = "0.1.1"
description = ""
authors = ["MCNatsu <nathan@emcie.co>"]
readme = "README.md"
packages = [{include = "pytest_stochastics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
mypy = "^1.11.2"
dataclasses-json = "^0.6.7"

[tool.poetry.plugins.pytest11]
pytest_stochastics = "pytest_stochastics.main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
