[tool.poetry]
name = "pytest-stochastics"
version = "0.2.0"
description = "pytest plugin that allows selectively running tests several times and accepting *some* failures."
authors = ["MCNatsu <nathan@emcie.co>"]
readme = "README.md"
packages = [{ include = "pytest_stochastics", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"
mypy = "^1.11.1"
dataclasses-json = "^0.6.7"

[tool.poetry.plugins.pytest11]
pytest_stochastics = "pytest_stochastics.main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
